# terraform-cicd

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: apply.yaml  plan.yaml
action/: after_terraform_apply_steps.py  terraform_apply_begins.py  terraform_dispatch.py  utils_dispatch.py
terraform-apply/: action.yaml
terraform-apply/action/: after_terraform_apply_steps.py  utils_apply.py
terraform-dispatch/: action.yaml
terraform-dispatch/action/: terraform_apply_begins.py  terraform_dispatch.py
terraform-plan/: action.yaml
