[tool.ruff]

select = ["E", "F", "I", "B", "W", "A", "N", "UP", "COM", "DTZ", "TID", "PD", "C90", "ANN", "D", "RUF"]
ignore = ["D212", "D203"]

fixable = ["I", "RUF100"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py38"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.pyright]
typeCheckingMode = "basic"
defineConstant = { DEBUG = true }

reportMissingImports = false
reportMissingTypeStubs = false
reportOptionalOperand = false
reportUnboundVariable = false
reportUnusedExpression = false
reportMissingModuleSource = true

pythonVersion = "3.8"
pythonPlatform = "Linux"

[tool.poetry]
name = "terraform-cicd"
description = "Terraform CI/CD workflow (GCP)."
readme = "README.md"
version = "0.1.0"
authors = [
    "fferngar92",
]

[tool.poetry.dependencies]
python = "^3.12"
urllib3 = "1.26.14"
requests = "^2.31.0"
pyright = "1.1.311"
ruff = "^0.9.2"
